--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "@linniaprotocol/linnia-js": "^0.3.0",
     "concurrently": "^4.0.1",
     "eth-crypto": "^1.2.4",
     "ganache-cli": "^6.1.8",
+    "ipfs-api": "^24.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
