encrypting is working

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "truffle-contract": "^1.1.8",
+    "truffle-contract": "^1.1.11",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
@@ -54,6 +54,7 @@
     "ganache-cli": "^6.1.8",
     "ipfs-api": "^24.0.2",
     "react": "^15.4.2",
+    "react-dev-tools": "0.0.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
