--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "eth-crypto": "^1.2.4",
     "ganache-cli": "^6.1.8",
     "ipfs-api": "^24.0.2",
+    "qrcode.react": "^0.8.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.32.4",
     "react-dev-tools": "0.0.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
