encrypt decrypt works

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
-    "fs-extra": "^0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
@@ -53,6 +52,7 @@
     "eth-crypto": "^1.2.4",
     "ganache-cli": "^6.1.8",
     "ipfs-api": "^24.0.2",
+    "ipfs-mini": "^1.1.2",
     "qrcode.react": "^0.8.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.32.4",
